--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ name: CI - Continuous Integration
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "dev" ]
+    branches: ["dev"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,6 +28,9 @@ jobs:
       
       - name: Install dependencies
         run: npm install
+
+      - name: Run ESLint
+        run: npm run lint
 
       - name: Run Jest
         run: npm test
