--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jest",
     "start": "node src/server.js",
-    "t": "node src/t.js"
+    "t": "node src/t.js",
+    "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "express",
     "api",
     "jest",
+    "eslint",
     "backend"
   ],
   "author": "Gabriel Antônio Maida, Luiz Felipe Carvalho Gomes, Pedro Nicoletti Obalski, Thiago Souto Xavier",
@@ -35,6 +37,9 @@
     "express": "^4.21.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
