--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
