--- a/package.json
+++ b/package.json
@@ -9,22 +9,12 @@
   "scripts": {
     "test": "jest",
     "start": "node src/server.js",
-    "t": "node src/t.js",
     "lint": "eslint src/*.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GabrielMaida/FMP-Back-End.git"
   },
-  "keywords": [
-    "nodejs",
-    "javascript",
-    "express",
-    "api",
-    "jest",
-    "eslint",
-    "backend"
-  ],
   "author": "Gabriel Antônio Maida, Luiz Felipe Carvalho Gomes, Pedro Nicoletti Obalski, Thiago Souto Xavier",
   "license": "MIT",
   "bugs": {
@@ -34,6 +24,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0"
   },
@@ -41,7 +32,6 @@
     "@eslint/js": "^9.12.0",
     "eslint": "^9.12.0",
     "globals": "^15.10.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "jest": "^29.7.0"
   }
 }
